--- a/lab2-task.html
+++ b/lab2-task.html
@@ -7,7 +7,7 @@
 <header>
 	
 	<img src="https://www.freeiconspng.com/uploads/world-globe-png-4.png" height="150" width="170">
-	 <img src="https://static1.textcraft.net/data1/9/f/9f57d890a07d2d240481f24935434569ef3a21c1da39a3ee5e6b4b0d3255bfef95601890afd80709da39a3ee5e6b4b0d3255bfef95601890afd8070983e19a18aeb5e6d4711507c876690635.png">
+	 <img src="C:\Users\Dell\Downloads\Internet-Vector.png">
 </header>
 <main>
 	<!-- <nav style="display: inline; float: right; padding-right: 5% ; font-size: 40"> -->
